--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "telegram-bot-course",
+    "name": "telega-bot",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -11,11 +11,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "node-telegram-bot-api": "^0.52.0",
-      "nodemon": "^2.0.7",
-      "pg": "^8.6.0",
-      "pg-hstore": "^2.3.3",
-      "sequelize": "^6.6.2"
+      "node-telegram-bot-api": "^0.61.0",
+      "nodemon": "^2.0.20"
     }
   }
   
